@@ -2,6 +2,14 @@
 
 	* Clarify licence version to be "LGPLv2" for the library
 
+	* kernel fixes:
+
+	* After mount set nlink attribute for the root inode to 1
+
+	* Fix wake up of task waiting for a reserved request
+
+	* Fix allowing setattr, listxattr and statfs for other users
+
 2007-09-18  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Add missing context initialization in fuse_fs_chmod().  Bug
